@@ -1,1 +1,13 @@
 # the-end-game
+![Logo](/res/End_Game.png)
+The End Game is a desktop game inspired by a tower defense game. This game was implemented by using JavaFX with a core idea of object-oriented programming.
+
+In the game, we act as the Avengers team to protect our base. Many of Thanos are invading!! Help the Avengers team to save our base.
+
+- Each character has different individual ability, Drag and drop an Avengers card on the battlefield by expense with the coin.
+- Plan your team to fight all the Thanos, when they're all cleared, you'll win the game.
+- Don't let the Thanos enter your base or you will lose.
+
+To run the .jar file, run this code in your terminal.
+
+    java -jar --module-path "<javaFX path>\lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media THE_END_GAME.jar
